# agent-project-template

./: Dockerfile  Makefile  README.md  README_zh.md  cookiecutter.json  env.sample  main.py  pyproject.toml  setup.cfg
agent_project_template/: __init__.py
agent_project_template/agents/: __init__.py  demo_agent.py
agent_project_template/api/: README.md  __init__.py  factory.py  middleware.py  router.py
agent_project_template/api/errors/: exception_handlers.py
agent_project_template/api/schemas/: __init__.py  error.py
agent_project_template/api/v1/: __init__.py
agent_project_template/api/v1/endpoints/: __init__.py  demo.py  health.py
agent_project_template/api/v1/schemas/: __init__.py
agent_project_template/api/v1/schemas/requests/: __init__.py  base_request.py  chat_request.py  demo_request.py  generate_request.py  init_request.py  parse_resume_request.py  raw_markdown_request.py  submit_request.py
agent_project_template/api/v1/schemas/responses/: __init__.py  base_response.py  chat_response.py  demo_response.py  generate_response.py  init_response.py  jd_response.py  parse_resume_response.py  resume_response.py
agent_project_template/core/: __init__.py  config.py  error_codes.py  exceptions.py  llm_factory.py  llm_registry.py  logfire_config.py  logger.py  prompt_loader.py
agent_project_template/models/: __init__.py
agent_project_template/services/: __init__.py  demo_service.py
agent_project_template/stores/: __init__.py  database.py  redis_client.py  redis_lock.py
agent_project_template/utils/: __init__.py  logger.py  pdf_parser.py  snowflake_generator.py  word_parser.py
docs/: .gitkeep  ARCHITECTURE.md
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  README_zh.md  __init__.py  docker-compose.app.yml  docker-compose.middleware.yml  docker-compose.yml  env.sample  main.py  pyproject.toml
{{cookiecutter.project_slug}}/agents/: __init__.py
{{cookiecutter.project_slug}}/api/: router.py
{{cookiecutter.project_slug}}/api/v1/endpoints/: __init__.py  demo.py
{{cookiecutter.project_slug}}/core/: config.py  error_codes.py  exceptions.py  logger.py
{{cookiecutter.project_slug}}/docs/: .gitkeep  ARCHITECTURE.md
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/src/agents/: __init__.py  demo_agent.py
{{cookiecutter.project_slug}}/src/api/: __init__.py  factory.py  router.py
{{cookiecutter.project_slug}}/src/api/v1/: __init__.py
{{cookiecutter.project_slug}}/src/api/v1/endpoints/: __init__.py  demo.py  health.py
{{cookiecutter.project_slug}}/src/api/v1/schemas/responses/: health_response.py
{{cookiecutter.project_slug}}/src/core/: config.py  error_codes.py  llm_registry.py  logfire_config.py  logger.py  prompt_loader.py
{{cookiecutter.project_slug}}/src/models/: __init__.py
{{cookiecutter.project_slug}}/src/services/: __init__.py  demo_service.py
{{cookiecutter.project_slug}}/src/stores/: __init__.py  database.py
{{cookiecutter.project_slug}}/src/utils/: __init__.py
{{cookiecutter.project_slug}}/stores/: __init__.py  redis_lock.py
{{cookiecutter.project_slug}}/utils/: snowflake_generator.py
